fixed type avatarId and spacing css on page edit

--- a/src/app/components/inputs/base-input/base-input.component.scss
+++ b/src/app/components/inputs/base-input/base-input.component.scss
@@ -1,4 +1,5 @@
 .base-input {
   display: block;
   width: 100%;
+  margin-bottom: 1rem;
 }
